--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
  <head>
  <meta charset="utf-8">
- <meta http-equiv="refresh" content="5">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
  <title>Zuri_Watt_project_test</title>
@@ -14,9 +13,9 @@
  <h1> ENERGY CONSUMPTION DISPLAY <br/><small><em>
  kWh CONSUMPTION / kW PEAK</em></small></h1>
  <h3> <img src="zurich_logo.png" alt= "Logo" width="70" height="80"></h3>
- <ul class="userList"></ul>
+ <ul id="userList"></ul>
 
-<div class="userDetail">
+<div id="userDetail">
 <!--<b>kWh CONSUMPTION</b><b>RESIDENCE TIME (h)</b>-->
  <p ><b>Name</b>: <strong class="detailName"></strong></p>
  <p ><b>Age</b>: <strong class="detailAge"></strong></p>
